4.5 -> 5.0:
    - jbj: hmmm, b0rken --fileclass et al extensions in lib/format.c, todo++.
    - jbj: mark private extension handling for destruction, enabled for now.
    - jbj: permit headerSprintf tbls/exts args tp be NULL using sane default.
    - jbj: start using headerGetExtension under headerSprintf.
    - jbj: prime the tag data cache earlier.
    - jbj: enable Plan B tag data caching.
    - jbj: grr, Plan B: cache w sprintfTag, not sprintfToken.
    - jbj: use tag data cache.
    - jbj: add tag data cache.
    - jbj: eliminate rpmec data type.
    - jbj: merge rpmec into HE_t.
    - jbj: not yet for binary search retrieve using tagValue.
    - jbj: unbork --yaml.
    - rpm.org: rpmpsi iterator.
    - jbj: mark myTagName() and myTagValue() linear lookup for destruction.
    - jbj: create rpmdb/rpmtag.h, split from lib/rpmlib.h.
    - jbj: make the --info field colons align correctly, more (#323221).
    - jbj: fix :time and :date formats, pad --info spewage.
    - jbj: eliminate padding & formatPrefix, strings is strings now.
    - jbj: bury hex dump in intFormat defaults, refactor common code.
    - jbj: hmmm, --yaml is b0rken atm, todo++;
    - jbj: add assert's to control tag container values.
    - jbj: teach formatValue() to create an element tag container.
    - jbj: change the common integer format from int_32 to int_64 everywhere.
    - jbj: teach intFormat() to handle strings.
    - jbj: add he->ix, eliminate the less egregious he->freeData overload hack.
    - jbj: remove useless HE_t indirection with (*he->p).ptr, he->p.ptr instead.
    - jbj: fix several indirection problems.
    - jbj: eliminate data arg in (*headerTagFormatFunction).
    - jbj: start simplifying the world's most complicated sprintf.
    - jbj: fix: trigger conditions not displayed correctly.
    - jbj: trade-in element overload hack for another, less egregious, hack.
    - jbj: eliminate element arg in (*headerTagFormatFunction).